--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Exo-Text Justify - Triptic",
+  "name": "Exo-Text Justify - Tictactrip",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
